task1/traefik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-ingress-controller
  namespace: nirmal
  labels:
    app.kubernetes.io/app: traefik-ingress-ctlr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/app: traefik-ingress-ctlr
  template:
    metadata:
      name: traefik-ingress-lb            
      labels:
        app.kubernetes.io/app: traefik-ingress-ctlr
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:                                     
      - image: traefik:v1.7
        name: traefik-ingress-container
        ports:
        - name: https
          containerPort: 8080
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
        readinessProbe:
          httpGet:
            path: /
            port: https
          initialDelaySeconds: 5
          periodSeconds: 5
